[package]
name = "snake"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
reqwest = { version = "0.12.23", features = ["json"] }
hyper = "1.7.0"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
bytes = "1.10.1"
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.7"
clap = { version = "4.5.48", features = ["derive"] }
self_update = { version = "0.42", features = [
  "archive-tar",
  "compression-flate2",
] }
semver = "1.0.27"
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
axum-server = { version = "0.6", features = ["tls-rustls"] }
